--- a/cubemx540_test.ioc
+++ b/cubemx540_test.ioc
@@ -27,6 +27,9 @@ GRAPHICS0.BSP.mode=Output
 GRAPHICS0.BSP.name=LCD Reset Pin XRES
 GRAPHICS0.BSP.semaphore=
 GRAPHICS0.BSP.solution=PG13
+I2C3.I2C_Speed_Mode=I2C_Fast
+I2C3.IPParameters=Timing,I2C_Speed_Mode
+I2C3.Timing=0x6000030D
 KeepUserPlacement=false
 LTDC.ActiveH=272
 LTDC.ActiveW=480
@@ -50,12 +53,13 @@ Mcu.IP0=CORTEX_M7
 Mcu.IP1=CRC
 Mcu.IP2=FMC
 Mcu.IP3=GRAPHICS
-Mcu.IP4=LTDC
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=RTC
-Mcu.IP8=SYS
-Mcu.IPNb=9
+Mcu.IP4=I2C3
+Mcu.IP5=LTDC
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=RTC
+Mcu.IP9=SYS
+Mcu.IPNb=10
 Mcu.Name=STM32F746NGHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PA14
@@ -83,20 +87,22 @@ Mcu.Pin28=PJ4
 Mcu.Pin29=PJ5
 Mcu.Pin3=PK7
 Mcu.Pin30=PJ3
-Mcu.Pin31=PJ2
-Mcu.Pin32=VP_CRC_VS_CRC
-Mcu.Pin33=VP_GRAPHICS_VS-STemWin
-Mcu.Pin34=VP_GRAPHICS_VS-DisplayInterface-LTDC
-Mcu.Pin35=VP_RTC_VS_RTC_Activate
-Mcu.Pin36=VP_RTC_VS_RTC_Calendar
-Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin31=PH7
+Mcu.Pin32=PJ2
+Mcu.Pin33=PH8
+Mcu.Pin34=VP_CRC_VS_CRC
+Mcu.Pin35=VP_GRAPHICS_VS-STemWin
+Mcu.Pin36=VP_GRAPHICS_VS-DisplayInterface-LTDC
+Mcu.Pin37=VP_RTC_VS_RTC_Activate
+Mcu.Pin38=VP_RTC_VS_RTC_Calendar
+Mcu.Pin39=VP_SYS_VS_Systick
 Mcu.Pin4=PK6
 Mcu.Pin5=PK5
 Mcu.Pin6=PG12
 Mcu.Pin7=PI10
 Mcu.Pin8=PK4
 Mcu.Pin9=PK3
-Mcu.PinsNb=38
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F746NGHx
@@ -142,6 +148,12 @@ PH2.Mode=SdramChipSelect1_1
 PH2.Signal=FMC_SDCKE0
 PH3.Mode=SdramChipSelect1_1
 PH3.Signal=FMC_SDNE0
+PH7.Locked=true
+PH7.Mode=I2C
+PH7.Signal=I2C3_SCL
+PH8.Locked=true
+PH8.Mode=I2C
+PH8.Signal=I2C3_SDA
 PI1.GPIOParameters=GPIO_Label
 PI1.GPIO_Label=LED1
 PI1.Locked=true
@@ -220,7 +232,7 @@ ProjectManager.DeviceId=STM32F746NGHx
 ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.15.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x1000
+ProjectManager.HeapSize=0x6000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=0
@@ -230,11 +242,11 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=cubemx540_test.ioc
 ProjectManager.ProjectName=cubemx540_test
-ProjectManager.StackSize=0x1000
+ProjectManager.StackSize=0x6000
 ProjectManager.TargetToolchain=EWARM V8.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CRC_Init-CRC-false-HAL-true,4-GRAPHICS_Init-GRAPHICS-false-HAL-false,5-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CRC_Init-CRC-false-HAL-true,4-GRAPHICS_Init-GRAPHICS-false-HAL-false,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
@@ -301,9 +313,9 @@ RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=200000000
 RTC.AsynchPrediv=31
 RTC.Date=9
-RTC.Hours=9
+RTC.Hours=23
 RTC.IPParameters=WeekDay,Month,Date,Year,AsynchPrediv,SynchPrediv,Hours,Minutes
-RTC.Minutes=0
+RTC.Minutes=59
 RTC.Month=RTC_MONTH_OCTOBER
 RTC.SynchPrediv=999
 RTC.WeekDay=RTC_WEEKDAY_THURSDAY
