--- a/design.ioc
+++ b/design.ioc
@@ -62,7 +62,7 @@ GRAPHICS.EA_1_Apptype=Window
 GRAPHICS.EA_1_executable_name-STemWin=GUIBuilder.exe
 GRAPHICS.GUI_NUM_LAYERS-STemWin=1
 GRAPHICS.GUI_Num_KBYTES=40
-GRAPHICS.IPParameters=UseGUIBuilder,LIN_Color_Conversion_Layer0,GUI_Num_KBYTES,EA_1_Apptype,GUI_NUM_LAYERS-STemWin,LIN_Frame_Buffer_Depth_Layer0-STemWin,OPTIM_OS_use-STemWin,DMA2D_Graphics-STemWin,Check_OTM8009A_PixelFormat-STemWin,Use_SDRAM-STemWin,USE_Embedded_Wizard-STemWin,USE_STTouchGFX-STemWin,EA_1_executable_name-STemWin,EA_1_executable_full_name,EA_1_input_iniparam1s1,EA_1_input_param1,EA_1_in_file1_src,EA_1_in_file1_trg,EA_1_out_file1_src,EA_1_in_dir1_src,EA_1_in_dir1_trg
+GRAPHICS.IPParameters=UseGUIBuilder,LIN_Color_Conversion_Layer0,GUI_Num_KBYTES,EA_1_Apptype,GUI_NUM_LAYERS-STemWin,LIN_Frame_Buffer_Depth_Layer0-STemWin,OPTIM_OS_use-STemWin,DMA2D_Graphics-STemWin,Check_OTM8009A_PixelFormat-STemWin,Use_SDRAM-STemWin,USE_Embedded_Wizard-STemWin,USE_STTouchGFX-STemWin,EA_1_executable_name-STemWin
 GRAPHICS.LIN_Color_Conversion_Layer0=GUICC_M565
 GRAPHICS.LIN_Frame_Buffer_Depth_Layer0-STemWin=16
 GRAPHICS.OPTIM_OS_use-STemWin=4
@@ -407,6 +407,8 @@ RTC.Month=RTC_MONTH_OCTOBER
 RTC.SynchPrediv=999
 RTC.WeekDay=RTC_WEEKDAY_THURSDAY
 RTC.Year=25
+SDMMC1.ClockDiv=6
+SDMMC1.IPParameters=ClockDiv
 SH.ADCx_IN0.0=ADC3_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 VP_CRC_VS_CRC.Mode=CRC_Activate
